use 'valueOf' for SettingsScanner rather than newInstance of Numbers